tools/tests/errors/surf_cont_15.ki
# Dict missing-key lookup via d[k] (string key)
var d = {"a": 1, "b": 2}
discard d["zzz"]
